2018-01-12 Jan Kotanski <jan.kotanski@desy.de>
	* fix a bug in parameter number
	* tagged as 0.10.1

2018-01-11 Jan Kotanski <jan.kotanski@desy.de>
	* add automics datasource list from ZMQ source
	* tagged as 0.10.0

2018-01-11 Jan Kotanski <jan.kotanski@desy.de>
	* add HTTP response source for eiger
	* add Tango File source for pilatus
	* tagged as 0.9.0

2018-01-10 Jan Kotanski <jan.kotanski@desy.de>
	* fix View 1:1 pixels action for pg < 0.9.9
	* tune ZMQ Stream source
	* tagged as 0.8.4

2018-01-10 Jan Kotanski <jan.kotanski@desy.de>
	* add View 1:1 pixels action
	* allow changing ZMQ Stream source topic during viewing
	* set default HWM for ZMQ Stream source to 1
	* tagged as 0.8.3

2018-01-09 Jan Kotanski <jan.kotanski@desy.de>
	* fix a bug for scaling initialization
	* tagged as 0.8.2

2018-01-09 Jan Kotanski <jan.kotanski@desy.de>
	* repack sources
	* tagged as 0.8.1

2018-01-09 Jan Kotanski <jan.kotanski@desy.de>
	* add loading image file
	* add topic ComboBox for ZMQ Stream source
	* statistics without scaling
	* tagged as 0.8.0

2018-01-05 Jan Kotanski <jan.kotanski@desy.de>
	* switch off autolevel on plot
	* tagged as 0.7.3

2018-01-05 Jan Kotanski <jan.kotanski@desy.de>
	* synchronize scale levels
	* tagged as 0.7.2

2018-01-04 Jan Kotanski <jan.kotanski@desy.de>
	* add aspect ratio locker
	* tagged as 0.7.1

2018-01-04 Jan Kotanski <jan.kotanski@desy.de>
	* add ZMQ Pickle source
	* add line cut plotting
	* add source timeout into configuration
	* tagged as 0.7.0

2017-12-20 Jan Kotanski <jan.kotanski@desy.de>
	* add mutex to hidra source
	* tagged as 0.6.11

2017-12-19 Jan Kotanski <jan.kotanski@desy.de>
	* make workaround for close query
	* tagged as 0.6.10

2017-12-19 Jan Kotanski <jan.kotanski@desy.de>
	* fix tiff support
	* tagged as 0.6.9

2017-12-08 Jan Kotanski <jan.kotanski@desy.de>
	* fix on missing tango database
	* tagged as 0.6.8

2017-12-08 Jan Kotanski <jan.kotanski@desy.de>
	* add tips to the widgets
	* tagged as 0.6.7
