@@ -1,4 +1,5 @@
 2018-01-12 Jan Kotanski <jan.kotanski@desy.de>
+	* add datasource topic fileter to zmq source
 	* fix a bug in parameter number
 	* tagged as 0.10.1
 
